# capstone-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: cleaned_noc_regions.csv
docs/: kanban.md  notes.md  user-requirements.md  user_stories.md
notebooks/: data_analysis.ipynb  data_cleaning.ipynb  enrich_data.ipynb  exploratory_data_analysis.ipynb  exploratory_data_cleaning.ipynb  exploratory_data_transformations.ipynb  fun_facts_analysis.ipynb  medal_analysis.ipynb  sandbox.ipynb  streamlit_visualisations.ipynb  transform_customers.ipynb  transform_merge.ipynb  transform_merged_to_filtered.ipynb  transform_transactions.ipynb
scripts/: run_app.py  run_etl.py
src 2/extract/: extract.py
src 2/load/: create_transactions_by_customers.py
src 2/sql/: extract_transactions.sql
src 2/transform/: clean_customers.py  clean_transactions.py  filter_customer_transactions.py
src 2/utils/: db_utils.py
src/extract/: extract.py  extract_customers.py  extract_query.py  extract_transactions.py
src/load/: load.py
src/streamlit/: app.py
src/transform/: merge_customers_transactions.py  transform.py
src/utils/: date_utils.py  file_utils.py  sql_utils.py
tests/: run_tests.py
tests/component_tests/: test_db_utils_component.py  test_extract_customers_component.py  test_extract_data.py  test_extract_data_component.py  test_extract_transactions_component.py  test_load_component.py  test_load_performance.py  test_transform_customers_component.py  test_transform_data.py  test_transform_transactions_component.py
tests/test_data/: corrupt_csv.csv  (+6 more)
(+40 files in other folders)
